[project]
authors = [{ name = "AJ Slater", email = "aj@slater.net" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django :: 5.1",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: JavaScript",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Multimedia :: Graphics :: Viewers",
]
dependencies = [
  "aioprocessing~=2.0",
  "ansicolors~=1.1",
  "bidict~=0.23",
  "channels~=4.2",
  "comicbox[pdf]~=2.1.0",
  "dateparser~=1.2",
  "django~=5.2",
  "djangorestframework~=3.16",
  "djangorestframework-camel-case~=1.4",
  "django-cachalot~=2.8",
  "django-cors-headers~=4.0",
  "django-rest-registration~=0.9",
  "django-vite~=3.1",
  "drf-spectacular~=0.28",
  "fnvhash~=0.1",
  "humanfriendly~=10.0",
  "humanize~=4.12",
  "hypercorn[h3]~=0.17",
  "nh3~=0.2",
  "psutil~=7.1",
  "pyparsing~=3.2",
  "requests~=2.24",
  "typing-extensions~=4.14",
  "tzlocal~=5.0",
  "watchdog~=6.0",
  "websocket-client~=1.2",
  "whitenoise[brotli]~=6.0",
  "versio~=0.5",
  "zipstream-ng~=1.8",
  "Pillow~=12.0",
  "loguru~=0.7.3",
]
description = "A comic archive web server."
keywords = ["comic", "cbz", "cbr", "cb7", "cbt", "pdf"]
license = "GPL-3.0-only"
name = "codex"
readme = "README.md"
requires-python = ">=3.10"
version = "1.9.14"

[project.urls]
News = "https://codex-comic-reader.readthedocs.io/NEWS/"
Documentation = "https://codex-comic-reader.readthedocs.io"
Demo = "https://demo.codex-reader.app/"
"Docker Image" = "https://hub.docker.com/r/ajslater/codex"
Issues = "https://github.com/ajslater/codex/issues"
Source = "https://github.com/ajslater/codex"

[project.scripts]
codex = "codex.run:main"

[dependency-groups]
dev = ["neovim~=0.3", "nplusone~=1.0", "picopt~=5.2", "toml-cli~=0.7"]
build = ["cairosvg~=2.8"]
lint = [
  "basedpyright~=1.30",
  "codespell~=2.4",
  "complexipy~=5.1",
  "djangorestframework-types~=0.9",
  "django-types~=0.22",
  "djlint~=1.36",
  "radon[toml]~=6.0",
  "ruff~=0.12",
  "ty~=0.0.4",
  "types-python-dateutil~=2.9",
  "vulture~=2.3",
  # For types
  "django-schema-graph~=3.1",
  "icecream~=2.1",

]
test = [
  "coverage[toml]~=7.0",
  "pytest-asyncio~=1.0",
  "pytest-cov~=7.0",
  "pytest-django~=4.1",
  "pytest-gitignore~=1.3",
]
docs = ["mkdocs~=1.6", "mkdocs-minify-plugin~=0.8"]
ci = ["requests~=2.32"]

[build-system]
requires = ["uv_build~=0.8.7"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
source-include = [
  ".circlci/**",
  ".env.platforms",
  ".*ignore",
  ".picopt_treestamps.yaml",
  ".readthedocs.yaml",
  ".remarkignore",
  ".shellcheckrc",
  "bin/**",
  "compose.yaml",
  "ci/**",
  "docs/codex/img/logo.svg",
  "docs/DOCKER.md",
  "docs/NEWS",
  "docs/NEWS.md",
  "docs/README.md",
  "docs/requirements.txt",
  "docs/strange.jpg",
  "docs/style.css",
  "docs/style.material.css",
  "docs/style.mkdocs.css",
  "docs/style.readthedocs.css",
  "docs/WINDOWS.md",
  "eslint.config.js",
  "frontend/**",
  "img/**",
  "mkdocks.yml",
  "mock_comics/**",
  "package-lock.json",
  "package.json",
  "strange.jpg",
  "tests/**",
  "uv.lock",
  "vulture_ignorelist.py",
  "Makefile",
  "NEWS.md",

]
source-exclude = [
  "**/*\\~",
  "**/.DS_Store",
  "frontend/node_modules",
  "codex/static_build",
]
wheel-exclude = [
  "**/*\\~",
  "**/.DS_Store",
  "codex/**/README.md",
  "codex/img",
  "codex/static_build",
  "codex/static_src",
]

[tool.basedpyright]
exclude = [
  "**/.*",
  "**/__pycache__",
  "**/node_modules",
  "codex/_vendor",
  "codex/static_build",
  "codex/static_root",
  "comics",
  "config",
  "dist",
  "site",
  "frontend",
  "site",
  "test-results",
  "typings",
  "vulture_ignorelist.py",
]
pythonVersion = "3.10"
failOnWarnings = false
reportAny = false
reportExplicitAny = false
reportImportCycles = true
reportIncompatibleUnannotatedOverride = true
reportMissingParameterType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportPrivateUsage = false # ruff does this
reportUnannotatedClassAttribute = false
reportUnknownArgumentType = false
reportUnknownLambdaType = "hint"
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnusedCallResult = false
reportUnusedParameter = false # ruff does this 

[tool.codespell]
builtin = 'clear,rare,code'
check-hidden = true
ignore-words-list = 'thead,ro,coverd,searchd,ws,falsy,versio'
skip = ".*,*~,./codex/_vendor,./codex/static_build,./codex/static_root,./comics,./config,./dist,./frontend/coverage,./node_modules,./package.json,./package-lock.json,./site,./test-results,/uv.lock"

[tool.complexipy]
failed = true
paths = ["codex", "tests"]

[tool.coverage.html]
directory = "test-results/coverage"

[tool.coverage.run]
source = ["codex"]
branch = true
concurrency = ["multiprocessing"]
omit = [
  "*/.*",
  "*__pycache__*",
  "codex/_vendor/*",
  "codex/static_build/*",
  "codex/static_root/*",
  "comics/*",
  "dist/*",
  "frontend/*",
  "node_modules/*",
  "site/*",
  "test-results/*",
  "typings/*",
  "vulture_ignorelist.py",
]

[tool.djlint]
extend_exclude = "*/.*,__pycache__,codex/_vendor,codex/static_build,codex/static_root,./comics,dist,site,test-results,typings"
ignore = "H030,H031"
profile = "django"
use_gitignore = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = """
    --junit-xml=test-results/pytest/results.xml
    -ra
    --strict-config
    --strict-markers
    --cov
    --cov-append
    --cov-report=html
    --cov-report=term
"""
junit_family = "xunit2"
testpaths = "tests"
DJANGO_SETTINGS_MODULE = "codex.settings"
pythonpath = ["."]

[tool.radon]
exclude = """\
  *~,.*,.*/*,__pycache__/*
  ,codex/_vendor/*,codex/static_build/*,codex/static_root/*
  ,config/*,dist/*,frontend/*,node_modules/*,site/*,test-results/*,typings/*
  """

[tool.ruff]
builtins = ["ic"]
extend-exclude = [
  "**/.*",
  "**/__pycache__",
  "codex/_vendor",
  "codex/static_build",
  "codex/static_root",
  "dist",
  "frontend",
  "site",
  "test-results",
  "typings",
  "vulture_ignorelist.py",
]
show-fixes = true
target-version = "py310"

[tool.ruff.lint]
extend-ignore = [
  "BLE001",  # catch bare exception
  "COM812",  # missing trailing comma
  "COM819",  # prohibit trailing comma
  "D203",    # blank line before class docstring
  "D206",    # formatted
  "D212",    # first line multi line docstring.
  "E111",    # formatted
  "E114",    # formatted
  "E117",    # over-indented
  "E501",    # 88 char line
  "ISC001",  # formatted
  "PERF203", # try block in loop
  "S101",    # assert
  "W191",    # formatted
]
extend-select = [
  # "AIR",
  "ERA",
  # "FAST",
  # ########
  # flake8 #
  # ########
  "YTT",
  # "ANN",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  # "CPY",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FIX",
  "FA",
  "INT",
  "ISC",
  "ICN",
  "LOG",
  # "G",
  "INP",
  "PIE",
  "PYI",
  "T20",
  "PT",
  # "Q", Formatted
  "RSE",
  "RET",
  "SLF",
  "SIM",
  "SLOT",
  "TID",
  # "TD",
  "TC",
  "ARG",
  "PTH",
  # ############
  # end flake8 #
  # ############
  "FLY",
  "I",
  "C90",
  # "NPY",
  # "PD",
  "N",
  "PERF",
  "E",
  "W",
  # "DOC",
  "D",
  "F",
  "PGH",
  "PLE",
  "PLR",
  "PLW",
  "UP",
  "FURB",
  "RUF",
  "TRY",
]
external = ["V101"]
task-tags = ["TODO", "FIXME", "XXX", "http", "HACK"]

[tool.ruff.lint.flake8-self]
ignore-names = ["_meta"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.per-file-ignores]
"codex/migrations/*" = ["RUF012", "T201"]
"codex/models/__init__.py" = ["F403"]
"codex/settings/*" = ["T201"]
"ci/cleanup-repo.py" = ["T201"]
"mock_comics/*" = ["S311", "T201"]
"tests/*" = ["D101", "D102", "T203"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ty.environment]
python = "./.venv"
python-version = "3.10"

[tool.ty.src]
exclude = [
  "**/.*",
  "**/__pycache__",
  "**/node_modules",
  "codex/_vendor",
  "codex/static_build",
  "codex/static_root",
  "comics",
  "dist",
  "frontend",
  "site",
  "test-results",
  "typings",
  "vulture_ignorelist.py",
]

[tool.typos.default.extend-words]
bookmarkd = "bookmarkd"
coverd = "coverd"
versio = "versio"

[tool.vulture]
exclude = [
  "*/.*",
  "*/__pycache__*",
  "*/node_modules*",
  "codex/_vendor",
  "codex/static_build/",
  "codex/static_root/",
  "comics/",
  "dist/",
  "frontend/",
  "site",
  "test_results/",
  "typings/",
]
min_confidence = 61
sort_by_size = true
