[project]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django :: 5.1",
  "Intended Audience :: End Users/Desktop",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: JavaScript",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Multimedia :: Graphics :: Viewers",
]
dependencies = [
  "bidict~=0.23",
  "channels~=4.2",
  "comicbox[pdf] @ file:///Users/aj/Code/comicbox/dist/comicbox-2.3.1-py3-none-any.whl",
  "dateparser~=1.2",
  "django-cachalot~=2.8",
  "django-cors-headers~=4.0",
  "django-rest-registration~=0.9",
  "django-vite~=3.1",
  "djangorestframework-camel-case~=1.4",
  "djangorestframework~=3.16",
  "django~=6.0",
  "drf-spectacular~=0.28",
  "granian~=2.7",
  "humanize~=4.12",
  "lark~=1.2",
  "loguru~=0.7.3",
  "nh3~=0.2",
  "Pillow~=12.0",
  "psutil~=7.1",
  "servestatic[brotli]~=4.1",
  "setproctitle~=1.3.7",
  "tomli~=2.0; python_version < '3.11'",
  "typing-extensions~=4.14",
  "tzlocal~=5.0",
  "watchfiles>=1.1.1",
  "zipstream-ng~=1.8",
]
description = "A comic archive web server."
keywords = ["cb7", "cbr", "cbt", "cbz", "comic", "pdf"]
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
name = "codex"
version = "1.10.11"
[[project.authors]]
name = "AJ Slater"
email = "aj@slater.net"

[project.urls]
News = "https://codex-comic-reader.readthedocs.io/NEWS/"
Documentation = "https://codex-comic-reader.readthedocs.io"
Demo = "https://demo.codex-reader.app/"
"Docker Image" = "https://github.com/ajslater/codex/pkgs/container/codex"
Issues = "https://github.com/ajslater/codex/issues"
Source = "https://github.com/ajslater/codex"

[project.scripts]
codex = "codex.run:main"

[dependency-groups]
dev = [
  "granian[reload]",
  "infer-types~=1.0.0",
  "neovim~=0.3",
  "nplusone~=1.0",
  "picopt~=6.1.1",
  "semver~=3.0.4",
  "toml-cli~=0.7",
  "tomlkit~=0.14",
]
build = ["cairosvg~=2.8"]
lint = [
  "basedpyright~=1.38",
  "codespell~=2.4",
  "complexipy~=5.1",
  "django-schema-graph~=3.1",
  "django-types~=0.22",
  "djangorestframework-types~=0.9",
  "djlint~=1.36",
  "icecream~=2.1",
  "mbake~=1.4.5",
  "pathspec~=1.0.4",
  "radon~=6.0",
  "ruff~=0.15",
  "types-python-dateutil~=2.9",
  "ty~=0.0.18",
  "vulture~=2.3",
]
test = [
  "coverage~=7.0",
  "pytest-asyncio~=1.0",
  "pytest-cov~=7.0",
  "pytest-django~=4.1",
  "pytest-gitignore~=1.3",
]
docs = ["mkdocs-minify-plugin~=0.8", "mkdocs~=1.6"]
ci = []

[build-system]
requires = ["uv_build~=0.11.2"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
source-include = [
  ".*ignore",
  ".circlci/**",
  ".env.platforms",
  ".github/**",
  ".picopt_treestamps.yaml",
  ".readthedocs.yaml",
  ".remarkignore",
  ".shellcheckrc",
  "Makefile",
  "NEWS.md",
  "bin/**",
  "bun.lock",
  "ci/**",
  "compose.yaml",
  "docs/DOCKER.md",
  "docs/NEWS",
  "docs/NEWS.md",
  "docs/README.md",
  "docs/WINDOWS.md",
  "docs/codex/img/logo.svg",
  "docs/requirements.txt",
  "docs/strange.jpg",
  "docs/style.css",
  "docs/style.material.css",
  "docs/style.mkdocs.css",
  "docs/style.readthedocs.css",
  "eslint.config.js",
  "frontend/**",
  "img/**",
  "mkdocks.yml",
  "mock_comics/**",
  "package-lock.json",
  "package.json",
  "strange.jpg",
  "tests/**",
  "uv.lock",
  "vulture_ignorelist.py",
]
source-exclude = [
  "**/*\\~",
  "**/.DS_Store",
  "codex/static_build",
  "frontend/node_modules",
]
wheel-exclude = [
  "**/*\\~",
  "**/.DS_Store",
  "codex/**/README.md",
  "codex/img",
  "codex/static_build",
  "codex/static_src",
]

[tool.basedpyright]
exclude = [
  "**/.*",
  "**/__pycache__",
  "**/node_modules",
  "codex/_vendor",
  "codex/static",
  "codex/static_build",
  "comics",
  "config",
  "dist",
  "frontend",
  "site",
  "site",
  "test-results",
  "typings",
  "vulture_ignorelist.py",
]
pythonVersion = "3.12"
failOnWarnings = false
reportAny = false
reportExplicitAny = false
reportImportCycles = true
reportIncompatibleUnannotatedOverride = true
reportMissingParameterType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnannotatedClassAttribute = false
reportUnknownArgumentType = false
reportUnknownLambdaType = "hint"
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnusedCallResult = false
reportUnusedParameter = false

[tool.codespell]
builtin = "clear,code,rare"
check-hidden = true
ignore-words-list = "coverd,falsy,ro,searchd,thead,versio,ws"
skip = "*~,.*,./bun.lock,./codex/_vendor,./codex/static,./codex/static_build,./comics,./config,./dist,./frontend/coverage,./node_modules,./package-lock.json,./package.json,./site,./test-results,/uv.lock"

[tool.complexipy]
failed = true
paths = ["codex", "tests"]
exclude = [
  "*/.*",
  "frontend",
  "node_modules",
  "site",
  "test-results",
  "typings",
  "vulture_ignorelist.py",
]

[tool.coverage.html]
directory = "test-results/coverage"

[tool.coverage.run]
source = ["codex"]
branch = true
concurrency = ["multiprocessing"]
omit = [
  "*/.*",
  "*__pycache__*",
  "codex/_vendor/*",
  "codex/static/*",
  "codex/static_build/*",
  "comics/*",
  "dist/*",
  "frontend/*",
  "node_modules/*",
  "site/*",
  "test-results/*",
  "typings/*",
  "vulture_ignorelist.py",
]

[tool.pytest]
minversion = "9.0"
addopts = [
  "--cov",
  "--cov-append",
  "--cov-report=html",
  "--cov-report=term",
  "--junit-xml=test-results/pytest/results.xml",
  "--strict-config",
  "--strict-markers",
  "-ra",
]
junit_family = "xunit2"
strict = true
testpaths = ["tests"]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "codex.settings"

[tool.radon]
exclude = "*~,.*,.*/*,__pycache__/*,codex/_vendor/*,codex/static/*,codex/static_build/*,config/*,dist/*,frontend/*,node_modules/*,site/*,test-results/*,typings/*"

[tool.ruff]
builtins = ["ic"]
extend-exclude = [
  "**/.*",
  "**/__pycache__",
  "codex/_vendor",
  "codex/static",
  "codex/static_build",
  "dist",
  "frontend",
  "site",
  "test-results",
  "typings",
  "vulture_ignorelist.py",
]
show-fixes = true
target-version = "py312"

[tool.ruff.lint]
extend-ignore = [
  "BLE001",
  "COM812",
  "COM819",
  "D203",
  "D206",
  "D212",
  "E111",
  "E114",
  "E117",
  "E501",
  "ISC001",
  "PERF203",
  "S101",
  "W191",
]
extend-select = [
  "A",
  "ARG",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FBT",
  "FIX",
  "FLY",
  "FURB",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "LOG",
  "N",
  "PERF",
  "PGH",
  "PIE",
  "PLE",
  "PLR",
  "PLW",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
external = ["V101"]
task-tags = ["FIXME", "HACK", "TODO", "XXX", "http"]

[tool.ruff.lint.flake8-self]
ignore-names = ["_meta"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D101", "D102", "T203"]
"codex/migrations/*" = ["RUF012", "T201"]
"codex/models/__init__.py" = ["F403"]
"ci/cleanup-repo.py" = ["T201"]
"mock_comics/*" = ["S311", "T201"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ty.environment]
python = "./.venv"
python-version = "3.12"

[tool.ty.src]
exclude = [
  "**/.*",
  "**/__pycache__",
  "**/node_modules",
  "codex/_vendor",
  "codex/static",
  "codex/static_build",
  "comics",
  "dist",
  "frontend",
  "site",
  "test-results",
  "typings",
  "vulture_ignorelist.py",
]

[tool.typos.default.extend-words]
bookmarkd = "bookmarkd"
coverd = "coverd"
versio = "versio"

[tool.vulture]
exclude = [
  "*/.*",
  "*/__pycache__*",
  "*/node_modules*",
  "codex/_vendor",
  "codex/static/",
  "codex/static_build/",
  "comics/",
  "dist/",
  "frontend/",
  "site",
  "test_results/",
  "typings/",
]
min_confidence = 61
sort_by_size = true

[tool.djlint]
extend_exclude = "*/.*,__pycache__,codex/_vendor,codex/static_build,codex/static,./comics,dist,site,test-results,typings"
ignore = "H030,H031"
profile = "django"
use_gitignore = true
